--- a/escalex.html
+++ b/escalex.html
@@ -35,8 +35,19 @@
     onAuthStateChanged(auth, async (user) => {
 
       if (!user) {
-        alert("Você precisa estar logado para acessar o Escalex.");
-        window.location.href = "index.html";
+         const escolha = confirm(
+    "⚠ Você precisa estar logado para acessar o Escalex.\n\n" +
+    "Clique em OK para fazer login com o DGMCG.\n" +
+    "Clique em Cancelar para voltar ao início."
+    );
+
+    if (escolha) {
+    // 👉 abre o popup de login DGMCG
+    window.dispatchEvent(new Event("abrirLoginDGMCG"));
+  } else {
+    window.location.href = "index.html";
+  }
+
         return;
       }
 
