--- a/escalex.html
+++ b/escalex.html
@@ -186,9 +186,7 @@
 
   <!-- Power BI -->
   <div id="dashboard" class="iframe-container active">
-    <iframe title="Escalex"
-      src="https://app.powerbi.com/view?r=eyJrIjoiMmQ1MmYwY2MtZmZhNS00N2ZjLWEwYjctZjhjODczMWUwN2QwIiwidCI6IjQ4YWFmOTY3LTE3MjAtNDY2ZC04M2Y0LTJiOTAxOWRhNTg0ZiJ9"
-      allowFullScreen="true"></iframe>
+    <iframe title="Escalex V2" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiNmM0N2MyYTgtNGI0Yi00MDEwLThhYzQtYjUyNjEwMTM1ZmZkIiwidCI6IjQ4YWFmOTY3LTE3MjAtNDY2ZC04M2Y0LTJiOTAxOWRhNTg0ZiJ9" frameborder="0" allowFullScreen="true"></iframe>
   </div>
 
   <!-- Gamma -->
