--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     <button onclick="abrirDegeminho('publico')">Degeminho - Público</button>
     <button onclick="abrirDegeminho('servidor')">Degeminho - Servidor</button>
     <button onclick="abrirPopup()">Login DGMCG</button>
-     <button onclick="abrirDegeminho('Gerencial')">ClickUp — Gerencial</button>
+    <button onclick="logout()">Logoff</button>
   </div>
 </div>
 
