--- a/index.html
+++ b/index.html
@@ -5,7 +5,181 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portal DGMCG</title>
   <style>
-    /* Seu código de estilo aqui */
+    :root {
+      --azul-escuro: #002147;
+      --azul: #0059b3;
+      --bg: #f8f9fc;
+      --texto: #333;
+      --card: #fff;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: var(--bg);
+      color: var(--texto);
+    }
+
+    header {
+      background: var(--azul-escuro);
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 15px 40px;
+    }
+
+    header img {
+      max-height: 60px;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin-left: 20px;
+      font-size: 18px;
+      font-weight: 600;
+      padding: 6px 10px;
+      border-radius: 8px;
+      border: 1px solid transparent;
+    }
+
+    nav a:hover {
+      border-color: #fff;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 50px 20px;
+      background: linear-gradient(135deg, #004080, var(--azul));
+      color: #fff;
+    }
+
+    .hero h1 {
+      font-size: 2.2rem;
+      margin: 0 0 14px;
+    }
+
+    .hero p {
+      font-size: 1.1rem;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    .botao-simples {
+      display: inline-block;
+      background: #ffffff;
+      color: #004080;
+      font-weight: 600;
+      font-size: 0.95rem;
+      text-decoration: none;
+      padding: 8px 16px;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+      margin-bottom: 12px;
+    }
+
+    .botao-simples:hover {
+      background: #cce0ff;
+      color: #002147;
+    }
+
+    .container {
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
+      padding: 24px;
+      margin-bottom: 24px;
+      text-align: center;
+    }
+
+    h2 {
+      color: var(--azul-escuro);
+      margin: 0 0 14px;
+    }
+
+    .bullets {
+      line-height: 1.75;
+      text-align: left;
+    }
+
+    .organograma img {
+      width: 100%;
+      max-width: 1000px;
+      border-radius: 10px;
+      border: 1px solid #ddd;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    footer {
+      background: var(--azul-escuro);
+      color: #fff;
+      text-align: center;
+      padding: 16px;
+      margin-top: 36px;
+    }
+
+    /* Pop-up Login */
+    #popup-overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(4px);
+      justify-content: center;
+      align-items: center;
+      z-index: 99999;
+    }
+
+    #popup-login {
+      background: white;
+      border-radius: 12px;
+      padding: 40px 30px;
+      max-width: 400px;
+      width: 90%;
+      text-align: center;
+      position: relative;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
+    }
+
+    #popup-login button.close-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 22px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #555;
+    }
+
+    #google-login-btn {
+      background: #4285F4;
+      color: white;
+      border: none;
+      padding: 14px 20px;
+      width: 100%;
+      border-radius: 8px;
+      font-size: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -20,19 +194,46 @@
     </nav>
   </header>
 
-  <div id="degeminho-container">
-    <button id="degeminho-btn" onclick="toggleDegeminhoMenu()">
-      💬 Degeminho
-      <small>seu assistente virtual sobre a Lei das OSS</small>
-    </button>
+  <section class="hero">
+    <h1>Diretoria Geral de Monitoramento dos Contratos de Gestão</h1>
+    <p>
+      A DGMCG é responsável pelo acompanhamento, fiscalização e monitoramento da execução dos Contratos de Gestão firmados pela
+      Secretaria Estadual de Saúde de Pernambuco, garantindo transparência, eficiência e qualidade na aplicação dos recursos
+      públicos e na prestação dos serviços de saúde à população.
+    </p>
+  </section>
 
-    <div id="degeminho-menu">
-      <button onclick="abrirDegeminho('publico')">Degeminho - Público</button>
-      <button onclick="abrirDegeminho('servidor')">Degeminho - Servidor</button>
-      <button onclick="abrirPopup()">Login DGMCG</button>
-      <button onclick="logout()">Logoff</button> <!-- Novo botão de Logout -->
-    </div>
-  </div>
+  <main class="container">
+    <section class="card">
+      <h2>Nosso Papel</h2>
+      <p>
+        Atuamos no monitoramento sistemático das Organizações Sociais de Saúde (OSS), assegurando o alcance das metas assistenciais
+        e administrativas, promovendo qualidade, segurança do paciente e eficiência. Fortalecemos a governança e a tomada de decisão
+        baseada em dados.
+      </p>
+    </section>
+
+    <section class="card">
+      <h2>Atribuições Centrais</h2>
+      <div class="bullets">
+        • Planejar e coordenar a gestão contratual;<br />
+        • Zelar pela eficácia/eficiência do gasto público e ordenar despesas;<br />
+        • Modelar metas e indicadores; instruir seleção de OSS, repactuações e reequilíbrios;<br />
+        • Acompanhar qualificação/requalificação de OSS e adotar medidas administrativas.
+      </div>
+    </section>
+
+    <section class="card">
+      <h2>Organograma DGMCG</h2>
+      <div class="organograma">
+        <img src="ORGDGMCG.png" alt="Organograma DGMCG" />
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 — Diretoria Geral de Monitoramento dos Contratos de Gestão (DGMCG)
+  </footer>
 
   <!-- POP-UP DE LOGIN -->
   <div id="popup-overlay">
@@ -46,48 +247,19 @@
     </div>
   </div>
 
-  <!-- SCRIPTS DO DEGEMINHO + LOGIN -->
+  <!-- ========== SCRIPTS DO LOGIN + POP-UP ========== -->
   <script>
-    // Alternar exibição do menu
-    function toggleDegeminhoMenu() {
-      const menu = document.getElementById('degeminho-menu');
-      menu.style.display = (menu.style.display === 'flex') ? 'none' : 'flex';
-    }
-
-    // Abrir links em nova aba
-    function abrirDegeminho(tipo) {
-      if (tipo === 'publico') {
-        window.open('https://notebooklm.google.com/notebook/e3569581-4f89-4fad-bb4c-b6ffd4d9ad48', '_blank');
-      } else if (tipo === 'servidor') {
-        window.open('https://notebooklm.google.com/notebook/e69f64d0-9b16-432f-a091-ef76de628995', '_blank');
-      }
-      document.getElementById('degeminho-menu').style.display = 'none';
-    }
-
-    // Função para abrir o popup
-    function abrirPopup(){
+    // Abrir pop-up de login
+    function abrirPopup() {
       document.getElementById("popup-overlay").style.display = "flex";
     }
 
-    // Fechar popup
-    function fecharPopup(){
+    // Fechar pop-up de login
+    function fecharPopup() {
       document.getElementById("popup-overlay").style.display = "none";
     }
 
-    // Fechar menu ao clicar fora
-    document.addEventListener('click', (e) => {
-      const container = document.getElementById('degeminho-container');
-      if (!container.contains(e.target)) {
-        document.getElementById('degeminho-menu').style.display = 'none';
-      }
-    });
-  </script>
-
-  <!-- FIREBASE AUTENTICAÇÃO -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
-    import { getAuth, GoogleAuthProvider, signInWithPopup, signOut } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-auth.js";
-
+    // Firebase Login Google
     const firebaseConfig = {
       apiKey: "AIzaSyDx9oVgxNFos7c6qz8viLrAOHzTw26oNPc",
       authDomain: "portal-dgmcg.firebaseapp.com",
@@ -97,13 +269,12 @@
       appId: "1:455592059546:web:9c0a6308ebc3bc836e7523"
     };
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const provider = new GoogleAuthProvider();
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const provider = new firebase.auth.GoogleAuthProvider();
 
     window.loginGoogle = function() {
-      console.log("Tentando login...");
-      signInWithPopup(auth, provider)
+      auth.signInWithPopup(provider)
         .then(() => {
           alert("Login realizado com sucesso!");
           fecharPopup();
@@ -111,18 +282,6 @@
         })
         .catch(err => {
           alert("Erro ao fazer login: " + err.message);
-        });
-    };
-
-    window.logout = function() {
-      console.log("Tentando logout...");
-      signOut(auth)
-        .then(() => {
-          alert("Logout realizado com sucesso!");
-          window.location.href = "index.html"; // Redireciona para a página de login
-        })
-        .catch(err => {
-          alert("Erro ao fazer logout: " + err.message);
         });
     };
   </script>
