--- a/escalex.html
+++ b/escalex.html
@@ -157,6 +157,14 @@
     </nav>
   </header>
 
+  <!-- Looker Studio - Painel -->
+  <div id="looker-studio" class="iframe-container">
+    <iframe title="Escalex - Looker Studio"
+      src="https://lookerstudio.google.com/reporting/49c42751-c127-4f35-a807-d626d15ea87c"  <!-- Link do seu painel do Looker Studio -->
+      allowfullscreen="true">
+    </iframe>
+  </div>
+  
   <!-- Power BI - Dashboard -->
   <div id="dashboard" class="iframe-container">
     <iframe title="Escalex"
