--- a/escalex.html
+++ b/escalex.html
@@ -158,12 +158,9 @@
   </header>
 
   <!-- Looker Studio - Painel -->
-  <div id="looker-studio" class="iframe-container">
-    <iframe title="Escalex - Looker Studio"
-      src="https://lookerstudio.google.com/embed/reporting/49c42751-c127-4f35-a807-d626d15ea87c"  <!-- Link do seu painel do Looker Studio -->
-      allowfullscreen="true">
-    </iframe>
-  </div>
+  <div id="looker-dashboard" class="iframe-container">
+  <iframe width="100%" height="600" src="https://lookerstudio.google.com/embed/reporting/49c42751-c127-4f35-a807-d626d15ea87c/page/page_12345" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+</div>
   
   <!-- Power BI - Dashboard -->
   <div id="dashboard" class="iframe-container">
